# siapgrek-be

./: .env.example  .gitignore  Caddyfile  codebase_analysis.md  docker-compose.yml  payload_contracts.md  refactor_plan.md  refactor_plan2.md  refactor_plan3.md  refactor_plan4.md  refactor_plan5.md  skills-lock.json
SiapGrek_V1_lite/: SiapGrek_V1_lite.ino  config.h
database/: package.json  pnpm-lock.yaml  tsconfig.json
database/prisma/: schema.prisma
frontend/: middleware.ts  next.config.ts  package.json  tailwind.config.js  tsconfig.json
frontend/app/: fonts.ts  globals.css  layout.tsx  page.tsx
frontend/components/: ChatSidebar.tsx  ControlMenu.tsx  DetailRekomendasi.tsx  EnvironmentCard.tsx  Gauge.tsx  IntervalGrafik.tsx  LoginForm.tsx  MapPicker.tsx  Navbar.tsx  ParameterGrafik.tsx  RangeGrafik.tsx  RecommendationCard.tsx  RegisterForm.tsx  SensorCard.tsx  Sidebar.tsx  Snackbar.tsx  WeatherCard.tsx
frontend/context/: UserContext.tsx
frontend/lib/: auth-client.ts  cropImage.ts  fonts.ts
mosquitto/config/: pwfile  (+2 more)
openspec/: config.yaml
services/intelligent-service/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test_openai.py  test_openai2.py
services/intelligent-service/app/: chat.py  insights.py  knowledge.py  main.py  mcp_client.py  schemas.py  worker.py
services/intelligent-service/app/core/: config.py  database.py  mqtt.py  redis.py
services/intelligent-service/app/db/: models.py
services/intelligent-service/app/services/: fuzzy_service.py  ml_service.py
services/intelligent-service/models/: README.md
(+154 files in other folders)
