[project]
name = "intelligent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "packaging>=26.0",
    "paho-mqtt>=2.1.0",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
    "mcp>=1.9.0",
    "openai>=1.82.0",
    "httpx>=0.28.1",
    "ai-edge-litert>=2.1.2",
    "pgvector>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "cloudinary>=1.44.2",
]
